# SMA-outfits

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml  outfits.yaml  risk.yaml  universe.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  NEXT_STEPS.md  OUTFIT_STUDY.md
src/smaoutfits/: __init__.py  __main__.py  backtest.py  broker.py  broker_kraken.py  cli.py  config.py  data.py  engine.py  indicators.py  paper_session.py  portfolio.py  risk.py  strategy.py  study.py  types.py
tests/: test_backtest.py  test_broker_kraken.py  test_config.py  test_data.py  test_engine.py  test_indicators.py  test_paper_session.py  test_risk.py  test_strategy.py
