[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smaoutfits"
version = "0.4.1"
description = "A moving-average trading framework (backtest -> paper -> live) for Kraken and (later) Webull"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "rich>=13.7",
    "ccxt>=4.2",
]

[project.optional-dependencies]
backtest = ["backtesting>=0.3.3", "matplotlib>=3.8"]
live = ["python-kraken-sdk>=3.2"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
